[package]
name = "libreauth"
version = "0.11.0"
edition = "2018"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
description = "Collection of tools for user authentication."
keywords = ["authentication", "password", "oath", "hotp", "totp"]
documentation = "https://docs.rs/libreauth/"
repository = "https://github.com/breard-r/libreauth"
readme = "README.md"
license = "CECILL-C OR CECILL-2.1"
include = ["src/**/*", "Cargo.toml", "Licence_*.txt"]

[package.metadata.docs.rs]
features = ["cbindings"]

[lib]
name = "libreauth"
crate-type = ["rlib", "staticlib", "dylib"]

[features]
cbindings = ["libc"]

[dependencies]
rust-argon2 = "^0.4"
pbkdf2 = "^0.3"
hmac = "^0.7"
sha-1 = "^0.8"
sha2 = "^0.8"
sha3 = "^0.8"

unicode-normalization = "^0.1"
base64 = "^0.10"
base32 = "^0.4"
rand = "^0.6"
time = "^0.1"
hex = "^0.3"
nom = "5.0.0-beta2"

[dependencies.libc]
version = "^0.2"
optional = true
