[package]
name = "libreauth"
version = "0.14.0-dev"
edition = "2018"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
description = "Collection of tools for user authentication."
keywords = ["authentication", "password", "oath", "hotp", "totp"]
documentation = "https://docs.rs/libreauth/"
repository = "https://github.com/breard-r/libreauth"
readme = "README.md"
license = "CECILL-C OR CECILL-2.1"
include = ["src/**/*", "Cargo.toml", "Licence_*.txt"]

[package.metadata.docs.rs]
features = ["cbindings", "key", "oath-uri", "pass"]

[lib]
name = "libreauth"
crate-type = ["rlib", "staticlib", "dylib"]

[features]
default = ["hash", "key", "oath", "pass"]
cbindings = ["libc"]
hash = ["hmac", "sha-1", "sha2", "sha3"]
key = ["base32", "base64", "hex", "getrandom"]
oath = ["base32", "base64", "hash", "hex"]
oath-uri = ["oath", "url"]
pass = ["base64", "crypto-mac", "hash", "key", "nom", "pbkdf2", "rust-argon2", "unicode-normalization"]

[dependencies]
base32 = { version = "^0.4", optional = true }
base64 = { version = "^0.12", optional = true }
crypto-mac = { version = "^0.7", optional = true }
getrandom = { version = "^0.1", optional = true }
hex = { version = "^0.4", optional = true }
hmac = { version = "^0.7", optional = true }
libc = { version = "^0.2", optional = true }
nom = { version = "^5.1.1", optional = true }
pbkdf2 = { version = "^0.3", optional = true, default-features = false }
rust-argon2 = { version = "^0.8", optional = true }
sha-1 = { version = "^0.8", optional = true }
sha2 = { version = "^0.8", optional = true }
sha3 = { version = "^0.8", optional = true }
unicode-normalization = { version = "^0.1", optional = true }
url = { version = "^2.1", optional = true }
