[package]
name = "libreauth"
version = "0.18.1"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
edition = "2024"
rust-version = "1.85"
description = "Collection of user authentication tools."
documentation = "https://docs.rs/libreauth/"
readme = "README.md"
repository = "https://codeberg.org/rbd/libreauth"
license = "CECILL-C OR CECILL-2.1"
keywords = ["authentication", "password", "oath", "hotp", "totp"]
categories = ["authentication", "cryptography"]
include = ["src/**/*", "Cargo.toml", "Licence_*.txt"]

[package.metadata.docs.rs]
features = ["cbindings", "key", "oath-uri", "pass"]

[lib]
name = "libreauth"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["hash", "key", "oath", "pass", "stderror"]
cbindings = ["libc"]
hash = ["hmac", "sha-1", "sha2", "sha3"]
key = ["base32", "base64", "hex", "getrandom"]
oath = ["base32", "base64", "hash", "hex"]
oath-uri = ["oath", "url"]
pass = ["base64", "digest", "hash", "key", "nom", "pbkdf2", "rust-argon2", "unicode-normalization"]
balloon = ["pass", "balloon-hash"]
stderror = ["thiserror"]

[dependencies]
balloon-hash = { version = "0.4.0", default-features = false, optional = true, features = ["alloc"] }
base32 = { version = "0.5.1", default-features = false, optional = true }
base64 = { version = "0.22.0", default-features = false, optional = true, features = ["std"] }
digest = { version = "0.10.0", default-features = false, optional = true,  features = ["mac"] }
getrandom = { version = "0.3.3", default-features = false, optional = true }
hex = { version = "0.4.3", default-features = false, optional = true, features = ["std"] }
hmac = { version = "0.12.1", default-features = false, optional = true }
libc = { version = "0.2.141", default-features = false, optional = true }
nom = { version = "8.0.0", default-features = false, optional = true }
pbkdf2 = { version = "0.12.1", default-features = false, optional = true }
rust-argon2 = { version = "3.0.0", default-features = false, optional = true, features = ["crossbeam-utils"] }
sha-1 = { version = "0.10.1", default-features = false, optional = true }
sha2 = { version = "0.10.6", default-features = false, optional = true }
sha3 = { version = "0.10.7", default-features = false, optional = true }
thiserror = { version = "2.0.3", default-features = false, optional = true }
unicode-normalization = { version = "0.1.22", default-features = false, optional = true }
unicode_reader = { version = "1.0.2", default-features = false }
url = { version = "2.3.1", optional = true }
